--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -1,10 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ui.HomeActivity"
     tools:showIn="@layout/app_bar_home"
     android:orientation="vertical"
     android:background="@color/white">
@@ -38,12 +38,12 @@
             android:marqueeRepeatLimit="marquee_forever"
             android:scrollHorizontally="true"
             android:paddingLeft="15dip"
-            android:text="sdbdfbndsbndfs"
+            android:text=""
             android:textColor="@color/white"
             android:paddingRight="15dip"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:freezesText="true"></TextView>
+            android:freezesText="true"/>
 
     </RelativeLayout>
 
@@ -79,7 +79,7 @@
             android:paddingRight="15dip"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:freezesText="true"></TextView>
+            android:freezesText="true"/>
     </RelativeLayout>
 
 
@@ -92,7 +92,7 @@
         app:tabIndicatorHeight="5dp"
         app:tabSelectedTextColor="@color/red"
         app:tabTextColor="@color/black"
-        android:layout_height="wrap_content"></android.support.design.widget.TabLayout>
+        android:layout_height="wrap_content"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
